добавил список тем, затронутых на 1 уроке

--- a/Py_lanit/L_01/Lesson/L_01.md
+++ b/Py_lanit/L_01/Lesson/L_01.md
@@ -1,4 +1,10 @@
 # Урок 1 - *Основы Python.*
 0) заметки на полях
-1) создаем виртуальное окружение и активируем
-2) 
+1) виртуальное окружение
+2) переменные
+3) модули
+4) функции
+5) методы
+6) условия
+7) список
+8) циклы
