--- a/Py_lanit/L_01/Lesson/L_01.md
+++ b/Py_lanit/L_01/Lesson/L_01.md
@@ -8,3 +8,8 @@
 6) условия
 7) список
 8) циклы
+
+### Заметки
+### Виртуальное окружение
+### Переменные а также print и input
+Для того чтобы вывести что-нибудь на экран можно написать ``print(Hello world')``
