--- a/Py_lanit/L_01/Lesson/L_01.md
+++ b/Py_lanit/L_01/Lesson/L_01.md
@@ -10,6 +10,10 @@
 8) циклы
 
 ### Заметки
+
 ### Виртуальное окружение
+##### создать виртуальное окружение.```# python -m venv venv```
+##### активировать виртуальное окружение ```#  source venv/bin/activate```
+##### выйти из виртуального окружения ```#  source venv/bin/activate```
 ### Переменные а также print и input
 Для того чтобы вывести что-нибудь на экран можно написать ``print(Hello world')``
