--- a/Py_lanit/L_01/Lesson/L_01.md
+++ b/Py_lanit/L_01/Lesson/L_01.md
@@ -10,7 +10,19 @@
 8) циклы
 
 ### Заметки
+Ресурсы:
+https://coderbooks.ru/books/ 
+---
+*Pycharm комментирует фрагмент кода ctrl + /   (на маке command /)* 
 
+*Вертикальная черта в Pycharm указывает на ограничение в 120 символов
+(какой-то стандарт pep8)* 
+
+*Переменные можно называть как угодно но они не могут начинаться с **цифр**
+и быть из этого списка: ['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif',
+ 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or',
+ 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']*  
+Запросить можно комндой ```import keyword``` -> ```keyword.kwlist```
 ### Виртуальное окружение
 ##### создать виртуальное окружение.```# python -m venv venv```
 ##### активировать виртуальное окружение ```#  source venv/bin/activate```
