--- a/Py_lanit/L_01/Lesson/L_01.md
+++ b/Py_lanit/L_01/Lesson/L_01.md
@@ -22,7 +22,8 @@ https://coderbooks.ru/books/
 и быть из этого списка: ['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif',
  'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or',
  'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']*  
-Запросить можно комндой ```import keyword``` -> ```keyword.kwlist```
+
+Запросить этот список можно комндой ```import keyword``` -> ```keyword.kwlist```
 ### Виртуальное окружение
 ##### создать виртуальное окружение.```# python -m venv venv```
 ##### активировать виртуальное окружение ```#  source venv/bin/activate```
