--- a/Py_lanit/L_01/Lesson/L_01.md
+++ b/Py_lanit/L_01/Lesson/L_01.md
@@ -9,7 +9,7 @@
 7) список
 8) циклы
 
-### Заметки
+## Заметки
 Ресурсы:
 https://coderbooks.ru/books/ 
 ---
@@ -24,9 +24,25 @@ https://coderbooks.ru/books/
  'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']*  
 
 Запросить этот список можно комндой ```import keyword``` -> ```keyword.kwlist```
-### Виртуальное окружение
-##### создать виртуальное окружение.```# python -m venv venv```
+## Виртуальное окружение
+Все сторонние пакеты устанавливаются менеджером PIP глобально. Проверить это можно просто командой
+
+```pip show <имя_пакета>``` - где Location — путь до ваших глобальных пакетов. \
+В большинстве случаев, устанавливать пакеты глобально — плохая идея, потому что для разных проектов требуются \
+разные версии библиотек, Python не может различить версии в глобальном каталоге site-packages
+ — в нем останется только та версия пакета, которая была установлена последней.
+
+##### создать виртуальное окружение.```# python -m venv venv``` 
+Все новые пакеты будут устанавливаться в venv/lib/python3.x/site-packages/
 ##### активировать виртуальное окружение ```#  source venv/bin/activate```
-##### выйти из виртуального окружения ```#  source venv/bin/activate```
-### Переменные а также print и input
+узнать что он активирован можно по надписи (venv) в командной строке \
+Также новый путь до библиотек можно увидеть выполнив команду: ```python -c "import site; print(site.getsitepackages())"```
+##### выйти из виртуального окружения ```#  deactivate```
+
+## Переменные а также print и input
 Для того чтобы вывести что-нибудь на экран можно написать ``print(Hello world')``
+## Модули
+## Условия
+## Список
+## Циклы
+
