--- a/Py_lanit/L_01/Lesson/L_01.md
+++ b/Py_lanit/L_01/Lesson/L_01.md
@@ -40,8 +40,43 @@ https://coderbooks.ru/books/
 ##### выйти из виртуального окружения ```#  deactivate```
 
 ## Переменные а также print и input
-Для того чтобы вывести что-нибудь на экран можно написать ``print(Hello world')``
+Для того чтобы вывести что-нибудь на экран можно написать ``print('Hello world')`` \
+Для того чтобы ввести что нибудь ```input('ВВедите что нибудь')```
 ## Модули
+Модули - это файл кода Python, сохраненный с расширением *.py \
+Модули в Python отличаются маневренностью в логической организации кода. \
+Чтобы использовать функциональность одного модуля в другом, мы должны импортировать конкретный модуль.
+##### Оператор импорта
+Оператор импорта используется для импорта всех функций одного модуля в другой. \
+Здесь мы должны заметить, что мы можем использовать функциональность любого исходного файла Python, \
+импортировав этот файл в качестве модуля в другой исходный файл Python.
+
+Мы можем импортировать несколько модулей с помощью одного оператора импорта, \
+<span style="color:RED">**НО модуль загружается один раз**</span>, независимо от того,
+сколько раз он был импортирован в наш файл \
+```import module1,module2,........ module n```
+Если нам нужен вызвать определнную функцию из модуля, то можем сделать так:
+```
+import module1; 
+name = input("Enter the name?") 
+module1.KusokIsModule(name)
+```
+##### Оператор from-import
+Вместо того, чтобы импортировать весь модуль, \
+в python имеется возможность импортировать только определенные атрибутов модуля. \
+Это можно сделать с помощью from-import оператора.
+```
+from <module-name> import <name 1>, <name 2>..,<name n>   
+```
+в коде это выглядеть будет так:
+```
+from calculation import summation  
+#it will import only the summation() from calculation.py
+a = int(input("Enter the first number"))
+b = int(input("Enter the second number"))
+print("Sum = ",summation(a,b)) #we do not need to specify the module name while accessing summation()
+```
+
 ## Условия
 ## Список
 ## Циклы
