--- a/Py_lanit/L_01/Lesson/L_01.md
+++ b/Py_lanit/L_01/Lesson/L_01.md
@@ -52,8 +52,10 @@ https://coderbooks.ru/books/
 импортировав этот файл в качестве модуля в другой исходный файл Python.
 
 Мы можем импортировать несколько модулей с помощью одного оператора импорта, \
-<span style="color:RED">**НО модуль загружается один раз**</span>, независимо от того,
-сколько раз он был импортирован в наш файл \
+> [!CAUTION]
+> <span style="color:RED">**НО модуль загружается один раз**</span>, 
+> независимо от того, сколько раз он был импортирован в наш файл 
+
 ```import module1,module2,........ module n```
 Если нам нужен вызвать определнную функцию из модуля, то можем сделать так:
 ```
