--- a/Py_lanit/L_01/Lesson/L_01.md
+++ b/Py_lanit/L_01/Lesson/L_01.md
@@ -51,7 +51,7 @@ https://coderbooks.ru/books/
 Здесь мы должны заметить, что мы можем использовать функциональность любого исходного файла Python, \
 импортировав этот файл в качестве модуля в другой исходный файл Python.
 
-Мы можем импортировать несколько модулей с помощью одного оператора импорта, \
+Мы можем импортировать несколько модулей с помощью одного оператора импорта, 
 > [!CAUTION]
 > <span style="color:RED">**НО модуль загружается один раз**</span>, 
 > независимо от того, сколько раз он был импортирован в наш файл 
@@ -63,6 +63,10 @@ import module1;
 name = input("Enter the name?") 
 module1.KusokIsModule(name)
 ```
+Если название модуля слишком большое, и его не удобно вызывать в коде, его можно переименовать
+```import <module-name> as <specific-name> ```
+
+
 ##### Оператор from-import
 Вместо того, чтобы импортировать весь модуль, \
 в python имеется возможность импортировать только определенные атрибутов модуля. \
@@ -78,6 +82,22 @@ a = int(input("Enter the first number"))
 b = int(input("Enter the second number"))
 print("Sum = ",summation(a,b)) #we do not need to specify the module name while accessing summation()
 ```
+>[!NOTE]
+> Оператор from … import всегда лучше использовать, \
+> если мы заранее знаем атрибуты, которые нужно импортировать из модуля. \
+> Это не позволяет нашему коду быть тяжелее. Мы также можем импортировать все атрибуты из модуля, используя *. :
+```from <module> import *  ```
+##### Использование функции dir()
+Функция dir() возвращает отсортированный список имен, \
+определенных в переданном модуле. Этот список содержит все подмодули, переменные и функции, определенные в этом модуле.
+
+```
+import module1
+List = dir(module1)
+print(List)
+```
+
+
 
 ## Условия
 ## Список
