--- a/Py_lanit/L_01/Lesson/L_01.md
+++ b/Py_lanit/L_01/Lesson/L_01.md
@@ -85,7 +85,7 @@ print("Sum = ",summation(a,b)) #we do not need to specify the module name while 
 >[!NOTE]
 > Оператор from … import всегда лучше использовать, \
 > если мы заранее знаем атрибуты, которые нужно импортировать из модуля. \
-> Это не позволяет нашему коду быть тяжелее. Мы также можем импортировать все атрибуты из модуля, используя *. :
+> Это не позволяет нашему коду быть тяжелее. Мы также можем импортировать все атрибуты из модуля, используя *. : \
 ```from <module> import *  ```
 ##### Использование функции dir()
 Функция dir() возвращает отсортированный список имен, \
